objects/SDS_Integration_Log__c.object
<CustomObject>
    <description>The purpose of this object is to hold log information describing success/error of SDS integration process</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Purpose of the field is to provide additional description to the log event</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Download_SDS_XML__c</fullName>
        <formula>if(ISBLANK(XmlAttachment__c),&quot;No XML Attached&quot;,HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot;+ XmlAttachment__c ,&quot;Download XML&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SDS XML</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Placeholder for SDS operation exception</description>
        <label>Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XmlAttachment__c</fullName>
        <label>XmlAttachment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SDS Integration Log</label>
    <nameField>
        <label>SDS Integration Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SDS Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>